fix: resolved some broken styles on mobile

--- a/src/styles/blocks/article.css
+++ b/src/styles/blocks/article.css
@@ -79,10 +79,12 @@ article :where(img, pre, .info, .archive) {
     border-radius: 0 !important; /* overwrite specificity */
   }
 
+  article pre,
   article .info,
   article .archive {
-    border-width: 0px;
-    outline: 3px solid var(--border-color);
+    border-left: 0px;
+    border-right: 0px;
+    box-shadow: none;
   }
 }
 
